# product_scrape_tool

./: .env.example  .gitignore  README.md  pyproject.toml
data/samples/: batch_input_sample.csv
docs/: architecture.md  artifact_contract.md  batch_scraping.md  index.md  runbook.md  usage.md
docs/adr/: 0001-url-in-artifact-out-boundary.md  0002-crawl4ai-only-same-url-capture.md  0003-artifact-contract-stability.md  0004-evidence-axes-and-provenance.md  0005-contract-safe-semantic-enrichment.md  README.md
docs/releases/: v1.1.6_clean_images_table_md.md  v1.2.3_crawl4ai_multi_profile.md  v1.2.4_capture_decision_domain_learning.md  v1.2.5_worker_safe_mandatory_images.md  v1.2.6_crawl4ai_markdown_object_fix.md  v1.2.7_business_validation_layer.md  v1.2.8_batch_input_id_preflight.md  v1.2.9_artifact_audit.md  v1.3.0_runtime_preflight.md  v1.3.1_diagnostics_bundle.md  v1.3.2_quality_checks.md  v1.3.3_schema_stable_semantic_enrichment.md  v1.3.4_contract_safe_evidence_enrichment.md  v1.3.5_documentation_refresh.md
notebooks/: run_batch_scrape.ipynb  run_single_url_scrape.ipynb
scripts/: run_artifact_audit.py  run_batch_scrape.py  run_batch_triage.py  run_runtime_preflight.py  run_scrape.py
src/product_scraping_agent/: __init__.py  agent.py  agentic.py  artifact_audit.py  batch.py  batch_preflight.py  batch_triage.py  business_validation.py  config.py  full_scraper.py  image_diagnostics.py  images.py  log.py  models.py  page_classification.py  patterns.py  pipeline.py  prompts.py  proxy_router.py  runtime_preflight.py  semantic_enrichment.py  text_utils.py  url_analysis.py
src/product_scraping_agent/services/: __init__.py  http.py  llm.py  scraper.py
tests/: test_artifact_audit.py  test_batch_contract.py  test_batch_preflight.py  test_business_validation.py  test_capture_scoring.py  test_capture_scoring_v124.py  test_contract_safe_semantic_enrichment.py  test_crawl4ai_compat.py  test_diagnostics_bundle.py  test_evidence_recovery_contract.py  test_geo_access_contract.py  test_models.py  test_paths.py  test_runtime_preflight.py  test_semantic_enrichment_prompts.py  test_source_alignment_contract.py  test_url_first_contract.py  test_v125_visual_finalization.py  test_v126_crawl4ai_markdown_object_finalization.py
