[project]
name = "product-scraping-agent"
version = "1.3.4"
description = "Agentic URL-in product evidence artifact scraper with batch CSV support, source alignment, quality gates, multi-profile Crawl4AI capture, strict capture decisions, batch domain profile learning, vision, business validation, batch preflight checks, artifact audits, runtime diagnostics, batch triage, local quality checks, schema-stable semantic enrichment, and deterministic coding-readiness enrichment."
requires-python = ">=3.10,<3.13"
dependencies = [
    "crawl4ai>=0.8",
    "httpx>=0.28.1",
    "truststore>=0.10.4",
    "openai>=1.54",
    "loguru>=0.7",
    "pillow>=10.0",
    "pydantic>=2.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=7.2.0",
    "notebook>=7.0",
]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = ["src/product_scraping_agent"]

[tool.pdm.scripts]
scrape-url = "python scripts/run_scrape.py"
scrape-batch = "python scripts/run_batch_scrape.py"
audit-artifacts = "python scripts/run_artifact_audit.py"
runtime-preflight = "python scripts/run_runtime_preflight.py"
triage-batch = "python scripts/run_batch_triage.py"
check-compile = "python -m compileall -q src scripts tests"
check-tests = "pytest -q"
quality-check = { composite = ["check-compile", "check-tests"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
